--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Kawaikimono/Lesson-11-Express.js-Note-Taker#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "generate-unique-id": "^2.0.1",
+    "short-unique-id": "^4.4.4"
   }
 }
