--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "generate-unique-id": "^2.0.1",
-    "short-unique-id": "^4.4.4"
+    "short-unique-id": "^4.4.4",
+    "uuid": "^9.0.0"
   }
 }
